themes/wmgk/assets/css/wmgk.css
/* ... */
    .show__live-links li[class^="live-link__type"]:before {
      position: absolute;
      left: -24px;
      top: 14px;
      font-size: 1.25em; }
      @media screen and (min-width: 1024px) {
        .show__live-links li[class^="live-link__type"]:before {
          left: -30px;
          top: 8px;
          font-size: 0.88889em; } }
    .show__live-links li[class^="live-link__type"] a {
      color: #404041; }
      .show__live-links li[class^="live-link__type"] a:hover {
        color: #aa1c20; }

.show__live-links--more {
  text-align: center;
  position: relative;
  float: left;
  width: 100%;
  padding: 15px 0; }
  .show__live-links--more .more-btn {
    position: relative;
    color: #404041;
    bottom: auto; }

.more-btn {
  position: absolute;
  bottom: -35px;
  right: 0;
  background: none repeat scroll 0 0 transparent;
  border: 1px solid #404041;
  border-radius: 1em;
  outline: none;
  color: #404041;
  padding: 0.25em 0.85em;
  font-size: 12px;
  text-transform: capitalize; }
  .more-btn:hover {
    color: #aa1c20;
    border: 1px solid #aa1c20; }

.widget--live-player {
  margin: 0 1em 1em; }

.widget--live-player__title {
  display: none; }
  @media screen and (min-width: 768px) {
    .widget--live-player__title {
      display: block;
      margin: 0 0 1em;
      font-family: "Open Sans", sans-serif;
      font-size: 1em;
      font-weight: normal; } }

.widget--live-player ul {
  padding: 0;
  margin: 0; }

.widget--live-player li {
  list-style: none;
  display: block;
  padding: 0;
  margin: 0 0 26px;
  line-height: 1; }

/*doc
---
title: Social Share Buttons
name: social-share-buttons
category: Components
---

These are examples of Social Share Links for single articles.

```html_example
<a href="http://www.facebook.com/sharer/sharer.php?u=[URL]&title=[TITLE]" class="icon-facebook social-share-link"></a>
<a href="http://twitter.com/home?status=[TITLE]+[URL]" class="icon-twitter social-share-link"></a>
<a href="https://plus.google.com/share?url=[URL]" class="icon-google-plus social-share-link"></a>
<a href="" class="icon-volume-up social-share-link"></a>
```
*/
a.social-share-link {
  color: #000000;
  display: inline-block;
  width: 40px;
  height: 40px;
  font-size: 20px;
  border: 1px solid #000000;
  border-radius: 50%;
  padding: 9px;
  margin-right: 0.25em; }
  a.social-share-link:last-of-type {
    margin-right: 0; }
  a.social-share-link:hover {
    color: #561015; }

.social__list {
  padding: 33px 0;
  margin: 0;
  list-style: none; }

.social__link {
  padding: 0;
  margin: 0 1.25em 0 0;
  list-style: none;
  display: inline-block;
  font-size: 1em; }

.social__link:last-child {
  margin: 0; }

.social__link a, .social__link a:visited {
  color: #929497; }

.social__link a:hover, .social__link a:focus {
  color: #d0d2d3; }

.social__link a:active {
  color: #ffffff; }

.social__link--facebook:before {
  content: "\e60f"; }

.social__link--twitter:before {
  content: "\e610"; }

.social__link--google-plus:before {
  content: "\e611"; }

.social__link--youtube:before {
  content: "\e617"; }

.social__link--instagram:before {
  content: "\e616"; }

/*doc
---
title: Article Header
name: article-header
category: Components - Article
---

```html_example
<img src="http://placehold.it/600x400&amp;text=image" alt="placeholder" class="entry__featured-image">
<header class="entry__header">
	<time datetime="2014-11-10T20:11:28+00:00" class="entry__date">10 November</time>
    <h2 class="entry__title"><a href="">Test Show Post</a></h2>
</header>
<a href="http://www.facebook.com/sharer/sharer.php?u=[URL]&title=[TITLE]" class="icon-facebook social-share-link"></a>
<a href="http://twitter.com/home?status=[TITLE]+[URL]" class="icon-twitter social-share-link"></a>
<a href="https://plus.google.com/share?url=[URL]" class="icon-google-plus social-share-link"></a>
<a href="" class="icon-volume-up social-share-link"></a>
```

*/
.entry__header {
  margin-bottom: 2em; }

.entry__featured-image {
  width: 100%;
  height: auto;
  margin-bottom: 1em; }

.entry__title, .page__title {
  margin: 0;
  margin-bottom: 1em; }

/*doc
---
title: Article Footer
name: article-footer
category: Components - Article
---

```html_example
<footer class="entry__tags">
	<a href="">Category</a> / <a href="">tag one</a>,<a href="">tag two</a>,<a href="">tag three</a>
</footer>
```

*/
.header__search--form {
  display: block;
  position: relative;
  width: 100%;
  height: 40px;
  padding: 0 20px;
  border-top: 1px solid #303030;
  background-color: transparent; }
  @media screen and (min-width: 768px) {
    .header__search--form {
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 132px;
      padding: 16px 2.5%;
      background-color: #fff;
      border-top: none;
      border-bottom: 1px solid #303030;
      -webkit-transition: all 200ms ease-in-out;
      -moz-transition: all 200ms ease-in-out;
      transition: all 200ms ease-in-out;
      -webkit-transform: translate(0, -200%);
      -moz-transform: translate(0, -200%);
      -ms-transform: translate(0, -200%);
      -o-transform: translate(0, -200%);
      transform: translate(0, -200%);
      /* 200% ensures it's out of the way of the .wp-admin bar */
      z-index: 5000000;
      /* IAB z-index standards for nav drop downs. Prevents an ad from being over top unless it's a full-screen ad */ } }
  .logged-in .header__search--form {
    top: 32px; }

.header__search--label {
  cursor: pointer; }

.header__search--open {
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: translate(0, 0);
  -moz-transform: translate(0, 0);
  -ms-transform: translate(0, 0);
  -o-transform: translate(0, 0);
  transform: translate(0, 0); }
/* ... */

